<resources>
    <string name="app_name">FinalProject</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_logo_description">Логотип приложения</string>
    <string name="hint_email">Электронная почта</string>
    <string name="hint_password">Пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="forgot_password_text">Забыли пароль?</string>
    <string name="no_account_text">Нет аккаунта?</string>
    <string name="sign_up_text">Зарегистрироваться</string>
    <string name="error_invalid_email">Неверный формат электронной почты</string>
    <string name="error_empty_password">Пароль не может быть пустым</string>
    <string name="action_loginFragment_to_registerFragment">action_loginFragment_to_registerFragment</string>

    <string name="register_button_text">Зарегистрироваться</string>
    <string name="hint_username">Имя пользователя</string>
    <string name="hint_display_name">Отображаемое имя (необязательно)</string>
    <string name="hint_confirm_password">Подтвердите пароль</string>
    <string name="error_empty_username">Имя пользователя не может быть пустым</string>
    <string name="error_password_too_short">Пароль должен содержать не менее 6 символов</string>
    <string name="error_passwords_do_not_match">Пароли не совпадают</string>
    <string name="registration_successful">Регистрация прошла успешно! Пожалуйста, войдите.</string>
    <string name="registration_failed">Ошибка регистрации</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="login_now_text">Войти</string>

    <string name="bottom_nav_home">Главная</string>
    <string name="bottom_nav_my_collections">Мои коллекции</string>
    <string name="bottom_nav_profile">Профиль</string>

    <string name="collection_cover_image_desc">Обложка коллекции</string>
    <string name="likes_icon_desc">Иконка лайков</string>
    <string name="views_icon_desc">Иконка просмотров</string>
    <string name="author_prefix">Автор: %1$s</string>
    <string name="unknown_author">Неизвестный автор</string>

    <string name="no_collections_found">Коллекций пока нет.</string>
    <string name="error_loading_collections">Ошибка загрузки коллекций</string>
    <string name="network_error">Сетевая ошибка</string>

    <string name="like_button_desc">Кнопка Лайк</string>
    <string name="collection_items_title">Элементы коллекции</string>
    <string name="collaborators_title">Соавторы</string>
    <string name="comments_title">Комментарии</string>
    <string name="add_comment_hint">Добавить комментарий...</string>
    <string name="post_comment_button">Опубликовать</string>
    <string name="error_loading_collection_details">Ошибка загрузки деталей коллекции</string>
    <string name="comment_posted_successfully">Комментарий опубликован</string>
    <string name="error_posting_comment">Ошибка публикации комментария</string>

    <string name="media_item_thumbnail_desc">Миниатюра элемента</string>
    <string name="user_avatar_desc">User Avatar\n</string>

    <string name="no_my_collections_found">У вас пока нет коллекций. Создайте первую!</string>
    <string name="create_new_collection_desc">Создать новую коллекцию</string>
    <string name="error_loading_my_collections">Ошибка загрузки ваших коллекций</string>
    <string name="please_login_to_see_collections">Пожалуйста, войдите, чтобы увидеть свои коллекции.</string>
    <string name="error_cannot_create_collection">Не удалось перейти к созданию коллекции</string>
    <string name="error_cannot_open_collection_details">Не удалось открыть детали коллекции</string>

    <string name="create_collection_title_toolbar">Создать коллекцию</string>
    <string name="hint_collection_title">Название коллекции*</string>
    <string name="hint_collection_description">Описание (необязательно)</string>
    <string name="hint_collection_cover_url">URL обложки (необязательно)</string>
    <string name="label_is_public">Сделать публичной</string>
    <string name="button_create_collection">Создать</string>
    <string name="error_collection_title_required">Название коллекции обязательно</string>
    <string name="collection_created_successfully">Коллекция успешно создана</string>
    <string name="error_creating_collection">Ошибка при создании коллекции</string>
    <string name="edit_collection_title_toolbar">Редактировать коллекцию</string>
    <string name="button_save_changes">Сохранить изменения</string>

    <string name="add_item_to_collection_toolbar">Добавить элемент в коллекцию</string>
    <string name="hint_media_item_id">ID медиа-элемента*</string>
    <string name="hint_item_notes">Заметки к элементу (необязательно)</string>
    <string name="button_add_item">Добавить элемент</string>
    <string name="error_media_item_id_required">ID медиа-элемента обязателен</string>
    <string name="item_added_successfully">Элемент успешно добавлен</string>
    <string name="error_adding_item">Ошибка при добавлении элемента</string>
    <string name="collection_id_missing">ID коллекции отсутствует</string>

    <string name="user_profile_title">Профиль пользователя</string>
    <string name="label_username">Имя пользователя:</string>
    <string name="label_display_name">Отображаемое имя:</string>
    <string name="label_email">Email:</string>
    <string name="label_bio">О себе:</string>
    <string name="label_joined_on">Присоединился:</string>
    <string name="label_last_login">Последний вход:</string>
    <string name="button_edit_profile">Редактировать профиль</string>
    <string name="button_logout">Выйти из аккаунта</string>
    <string name="confirm_logout_title">Подтверждение</string>
    <string name="confirm_logout_message">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="action_yes">Да</string>
    <string name="action_no">Нет</string>
    <string name="logged_out_successfully">Вы успешно вышли из аккаунта.</string>
    <string name="error_loading_profile">Ошибка загрузки профиля</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="user_not_logged_in">Пользователь не авторизован</string>
    <string name="default_bio">Информация отсутствует.</string>
    <string name="default_display_name">Не указано</string>
    <string name="placeholder_date">дд.мм.гггг</string>

    <string name="edit_profile_toolbar_title">Редактирование профиля</string>
    <string name="hint_display_name_edit">Отображаемое имя</string>
    <string name="hint_bio_edit">О себе</string>
    <string name="hint_avatar_url_edit">URL аватара</string>
    <string name="button_save_profile_changes">Сохранить изменения</string>
    <string name="profile_updated_successfully">Профиль успешно обновлен</string>
    <string name="error_updating_profile">Ошибка при обновлении профиля</string>
    <string name="error_loading_data_for_edit">Ошибка загрузки данных для редактирования</string>

    <string name="media_item_details_title_toolbar">Детали элемента</string>
    <string name="label_media_item_title">Название:</string>
    <string name="label_media_item_creator">Автор/Создатель:</string>
    <string name="label_media_item_type">Тип:</string>
    <string name="label_media_item_description">Описание:</string>
    <string name="label_media_item_release_date">Дата выхода:</string>
    <string name="label_media_item_added_at">Добавлено:</string>
    <string name="label_media_item_external_url">Внешняя ссылка:</string>
    <string name="button_open_external_url">Открыть ссылку</string>
    <string name="button_edit_media_item">Редактировать элемент</string>
    <string name="button_delete_media_item">Удалить элемент</string>
    <string name="confirm_delete_media_item_title">Удалить элемент?</string>
    <string name="confirm_delete_media_item_message">Вы уверены, что хотите удалить этот медиа-элемент? Это действие необратимо.</string>
    <string name="media_item_deleted_successfully">Медиа-элемент удален</string>
    <string name="error_deleting_media_item">Ошибка удаления медиа-элемента</string>
    <string name="error_loading_media_item_details">Ошибка загрузки деталей элемента</string>
    <string name="media_item_not_found">Медиа-элемент не найден</string>
    <string name="no_external_url">Внешняя ссылка отсутствует</string>
    <string name="cannot_open_url">Не удалось открыть ссылку</string>

    <string name="edit_media_item_toolbar_title">Редактировать медиа-элемент</string>
    <string name="hint_media_item_title_edit">Название*</string>
    <string name="hint_media_item_creator_edit">Автор/Создатель</string>
    <string name="hint_media_item_description_edit">Описание</string>
    <string name="hint_media_item_thumbnail_url_edit">URL миниатюры</string>
    <string name="hint_media_item_external_url_edit">Внешняя ссылка (URL)</string>
    <string name="hint_media_item_release_date_edit">Дата выхода (гггг-мм-дд)</string>
    <string name="button_save_media_item_changes">Сохранить изменения</string>
    <string name="media_item_updated_successfully">Медиа-элемент обновлен</string>
    <string name="error_updating_media_item">Ошибка обновления медиа-элемента</string>
    <string name="error_media_item_title_required">Название медиа-элемента обязательно</string>
    <string name="label_media_item_tags">Теги:</string>
</resources>